compact profile java 8